Add basic game board

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + TS</title>
+		<title>Snakes and ladders</title>
 	</head>
 	<body>
-		<main id="game">
-			<h1 class="text-white">Welcome to snakes and ladders</h1>
-			<section id="indicator" class="bg-red-200 h-24 w-full"></section>
-			<section id="board"></section>
+		<main id="game" class="flex flex-col gap-y-6">
+			<section id="board" class="grid grid-cols-10 grid-rows-10 gap-1 p-1 h-screen bg-gray-500 font-bold text-gray-700"></section>
 		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
