--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<main id="game" class="flex flex-col gap-y-6">
-			<section id="board" class="grid grid-cols-10 grid-rows-10 gap-1 p-1 h-screen bg-gray-500 font-bold text-gray-700"></section>
+			<section id="board" class="grid gap-1 p-1 h-screen bg-gray-500 font-bold text-gray-700"></section>
 		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
