--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Snakes and ladders</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<main id="game" class="flex flex-col gap-y-6">
-			<section id="board" class="grid gap-1 p-1 h-screen bg-gray-500 font-bold text-gray-700"></section>
+			<section id="board" class="grid gap-1 p-1 h-screen bg-gray-500 font-bold font-primary text-xl text-gray-800 tracking-widest"></section>
 		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
