Update game board
Move player counter to game class, add IGameOpts interface.

--- a/index.html
+++ b/index.html
@@ -43,14 +43,10 @@
 					</section>
 
 					<section class="flex justify-between items-center w-full max-w-sm">
-						<button class="bg-green-400 disabled:bg-gray-400 rounded-xl p-4 w-full text-white font-bold" disabled id="play">Play</button>
+						<button class="bg-green-400 rounded-xl p-4 w-full text-white font-bold" id="play">Play</button>
 					</section>
 				</div>
 			</article>
-
-			<section id="indicator" class="h-36 hidden text-center p-8">
-				<div class="font-bold text-4xl">Turn: Player <span id="player-turn"></span></div>
-			</section>
 
 			<section id="board" class="grid gap-1 p-1 h-screen font-bold font-primary text-xl bg-white text-gray-800 tracking-widest"></section>
 		</main>
