--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         />
     </head>
     <body>
-        <main id="game" class="flex flex-col h-screen">
+        <main id="game" class="bg-gray-300 h-screen w-full">
             <canvas
                 id="board"
-                class="grid gap-1 p-1 h-screen font-bold font-primary text-xl bg-white tracking-widest"
+                class="bg-white"
+                width="1000"
+                height="1000"
             ></canvas>
         </main>
         <script type="module" src="/src/main.ts"></script>
