--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main id="game" class="flex flex-col h-screen">
             <canvas
                 id="board"
-                class="grid gap-1 p-1 h-screen font-bold font-primary text-xl bg-white text-gray-800 tracking-widest"
+                class="grid gap-1 p-1 h-screen font-bold font-primary text-xl bg-white tracking-widest"
             ></canvas>
         </main>
         <script type="module" src="/src/main.ts"></script>
